<resources>
    <string name="app_name" translatable="false">Wise Trip</string>
    <string name="date_separator" translatable="false">~</string>
    <string name="appwidget_add_expense_name">Wise Trip: Expenses</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_out_error">Sign out error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_internet_connection">Not internet connection</string>
    <string name="your_trips">Your Trips</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_new_trip">Create new Trip</string>
    <string name="create_new_expense">Create new Expense</string>
    <string name="create_new_budget">Create new Budget</string>
    <string name="create_new_place">Create new Place</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="edit_budget">Edit Budget</string>
    <string name="edit_place">Edit Place</string>
    <string name="select_country">Select Country</string>
    <string name="hint_start_date">Start Date *</string>
    <string name="hint_expense_date">Expense Date *</string>
    <string name="hint_end_date">End Date *</string>
    <string name="hint_amount">Amount *</string>
    <string name="hint_budget_amount">Budget Amount *</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="hint_who_will_join_you">Who will join you?</string>
    <string name="hint_where_are_you_going_required">Where are you going? *</string>
    <string name="hint_where_are_you_going">Where are you going?</string>
    <string name="hint_what_is_the_trip_name">What\'s the trip\'s name? *</string>
    <string name="hint_what_is_the_expense_name">What\'s the place\'s name? *</string>
    <string name="hint_what_is_the_budget_name">What\'s the budget\'s name? *</string>
    <string name="destination_item_description">Destination %d</string>
    <string name="destination_footer_description">Add new destination</string>
    <string name="google_play_services_error">Google Play Services error</string>
    <string name="reached_maximum_number_of_travelers">Reached maximum number of travelers</string>
    <string name="mandatory_field">Mandatory field</string>
    <string name="trip_updated_error">Error while updating Trip</string>
    <string name="expense_updated_error">Error while updating the place</string>
    <string name="budget_updated_error">Error while updating the budget</string>
    <string name="place_updated_error">Error while updating the place</string>
    <string name="expense_loading_error">Error loading place</string>
    <string name="budget_loading_error">Error loading budget</string>
    <string name="place_loading_error">Error loading place</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_delete_trip">Delete Trip</string>
    <string name="title_delete_expense">Delete Expense</string>
    <string name="title_delete_budget">Delete Budget</string>
    <string name="title_delete_place">Delete Place</string>
    <string name="message_delete_trip">Do you want to permanently delete this Trip and all associated data?</string>
    <string name="message_delete_expense">Do you want to permanently delete this Expense?</string>
    <string name="message_delete_budget">Do you want to permanently delete this Budget?</string>
    <string name="message_delete_place">Do you want to permanently delete this Place?</string>
    <string name="current">Current</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="retry">Retry</string>
    <string name="no_saved_trips">No saved trips :(</string>
    <string name="no_saved_expenses">No saved expenses</string>
    <string name="no_saved_budgets">No saved budgets</string>
    <string name="no_saved_places">No saved places</string>
    <string name="could_not_load_trip_details">Could not load Trip details</string>
    <string name="photo_attribution_prefix">"Photo: "</string>
    <string name="expenses">Expenses</string>
    <string name="budgets">Budgets</string>
    <string name="places">Places</string>
    <string name="total_amount">Total</string>
    <string name="remaining_amount">Remaining</string>
    <string name="search_traveler_title">Search traveler</string>
    <string name="search_traveler_hint">Search traveler…</string>
    <string name="contacts_permission_message">Contacts permission is needed to find travelers in your contacts list.</string>
    <string name="notification_at">Notification at:</string>
    <string name="notification_percentage">%1$d%%</string>
    <string name="budget_limit_exceeded">Budget limit exceeded</string>
    <string name="contacts_permission_denied">Contacts permission denied</string>
    <string name="select_trip">Select a Trip</string>
    <string name="select_trip_inside_widget_settings">Click to select a Trip</string>
    <string name="place_details">Place details</string>
    <string name="must_sign_in_first">Must sign in the app first!</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="trip_photo">Trip photo</string>
    <string name="currency_icon">Currency icon</string>
    <string name="destination_icon">Destination icon</string>
    <string name="traveler_icon">Traveler icon</string>
    <string name="address_icon">Address icon</string>
    <string name="website_icon">Website icon</string>
    <string name="phone_icon">Phone icon</string>
    <string name="title_icon">Title icon</string>
    <string name="amount_icon">Amount icon</string>
    <string name="date_icon">Date icon</string>
    <string name="add_trip">Add Trip</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_budget">Add Budget</string>
    <string name="add_place">Add Place</string>
    <string name="edit">Edit</string>
    <string name="remove_destination">Remove destination</string>
    <plurals name="traveler_selected">
        <item quantity="other">%d selected</item>
    </plurals>
</resources>
