<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/destination_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/factory_form_item_margin_top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/destination_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/factory_form_icon_margin_horizontal"
                android:layout_marginRight="@dimen/factory_form_icon_margin_horizontal"
                android:contentDescription="@string/destination_icon"
                android:src="@drawable/ic_label"/>

            <TextView
                android:id="@+id/destination_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:textAppearance="@style/PlaceDetailsItemsText"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/factory_form_item_margin_top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/date_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/factory_form_icon_margin_horizontal"
                android:layout_marginRight="@dimen/factory_form_icon_margin_horizontal"
                android:contentDescription="@string/date_icon"
                android:src="@drawable/ic_calendar"/>

            <TextView
                android:id="@+id/date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:textAppearance="@style/PlaceDetailsItemsText"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/address_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/factory_form_item_margin_top"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/address_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/factory_form_icon_margin_horizontal"
                android:layout_marginRight="@dimen/factory_form_icon_margin_horizontal"
                android:contentDescription="@string/address_icon"
                android:src="@drawable/ic_destination"/>

            <TextView
                android:id="@+id/address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:freezesText="true"
                android:textAppearance="@style/PlaceDetailsItemsText"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/website_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/factory_form_item_margin_top"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/website_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/factory_form_icon_margin_horizontal"
                android:layout_marginRight="@dimen/factory_form_icon_margin_horizontal"
                android:contentDescription="@string/website_icon"
                android:src="@drawable/ic_website"/>

            <TextView
                android:id="@+id/website_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:clickable="true"
                android:freezesText="true"
                android:textAppearance="@style/PlaceDetailsItemsText"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/factory_form_item_margin_top"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/factory_form_icon_margin_horizontal"
                android:layout_marginRight="@dimen/factory_form_icon_margin_horizontal"
                android:contentDescription="@string/phone_icon"
                android:src="@drawable/ic_phone"/>

            <TextView
                android:id="@+id/phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:clickable="true"
                android:freezesText="true"
                android:textAppearance="@style/PlaceDetailsItemsText"
                android:visibility="visible"/>
        </LinearLayout>

        <fragment
            android:id="@+id/place_details_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/place_details_map_height"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            map:liteMode="true"
            map:mapType="normal"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>